--- a/src/components/AddMovieModal/AddMovieModal.css
+++ b/src/components/AddMovieModal/AddMovieModal.css
@@ -1,46 +1,46 @@
 .modal-container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.2);
-    z-index: 20;
-  }
-  
-  .add-movie-form {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--primary-color);
-    color: white;
-    padding: 2rem;
-    padding-bottom: 0.5rem;
-    font-size: large;
-    border-radius: 1rem;
-    position: relative;
-  }
-  
-  .add-movie-form input {
-    margin-bottom: 1rem;
-  }
-  
-  .add-movie-form div {
-    margin-bottom: 0.3rem;
-    margin-top: 0;
-  }
-  
-  .white-border {
-    border: 1px solid white;
-  }
-  
-  .close-icon {
-    position: absolute;
-    font-size: x-large;
-    top: 10px;
-    right: 10px;
-  }
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 20;
+}
+
+.add-movie-form {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--primary-color);
+  color: rgba(255, 255, 255, 0.711);
+  padding: 2rem;
+  padding-bottom: 0.5rem;
+  font-size: large;
+  border-radius: 1rem;
+  position: relative;
+}
+
+.add-movie-form input {
+  margin-bottom: 1rem;
+}
+
+.add-movie-form div {
+  margin-bottom: 0.3rem;
+  margin-top: 0;
+}
+
+.white-border {
+  border: 1px solid white;
+}
+
+.close-icon {
+  position: absolute;
+  font-size: x-large;
+  top: 10px;
+  right: 10px;
+}
